--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.application.name=spring-cloud-blank
+spring.application.name=example-security
 spring.cloud.config.uri=${CONFIG_SERVICE_URI:http://localhost:8888}
 spring.cloud.config.fail-fast=true
 management.info.git.mode=full
