--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.6.RELEASE</version>
+        <version>2.2.8.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -27,6 +27,7 @@
         <springfox.swagger.version>2.9.2</springfox.swagger.version>
 
         <jupiter-tools.version>0.3</jupiter-tools.version>
+        <com.jupiter-tools.spring-test-web.version>0.2</com.jupiter-tools.spring-test-web.version>
 
         <whitesoft.utils.version>1.5-SNAPSHOT</whitesoft.utils.version>
         <whitesoft.test.utils.version>2.1.3-SNAPSHOT</whitesoft.test.utils.version>
@@ -96,6 +97,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <!-- endregion -->
 
@@ -244,6 +250,12 @@
             <groupId>com.jupiter-tools</groupId>
             <artifactId>spring-test-postgres</artifactId>
             <version>${jupiter-tools.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jupiter-tools</groupId>
+            <artifactId>spring-test-web</artifactId>
+            <version>${com.jupiter-tools.spring-test-web.version}</version>
             <scope>test</scope>
         </dependency>
 
