--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,6 @@
 spring.application.name=example-security
-spring.cloud.config.uri=${CONFIG_SERVICE_URI:http://localhost:8888}
+spring.cloud.config.uri=${CONFIG_SERVICE_URI:http://localhost:8080}
 spring.cloud.config.fail-fast=true
+eureka.client.enabled=false
+spring.cloud.config.enabled=false
 management.info.git.mode=full
