--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,12 @@
             <version>${com.jupiter-tools.spring-test-web.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>2.0</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!-- endregion Tests -->
 
