--- a/pom.xml
+++ b/pom.xml
@@ -260,9 +260,9 @@
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
-            <artifactId>testcontainers</artifactId>
-            <version>2.0</version>
-            <scope>compile</scope>
+            <artifactId>postgresql</artifactId>
+            <version>1.12.4</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- endregion Tests -->
